--- a/index.html
+++ b/index.html
@@ -12,7 +12,45 @@
 <body>
   <div class="h-100vh">
     <div>
+      <h1>
+        Front End Dev.
+      </h1>
+    </div>
 
+    <div>
+      <img src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
+    </div>
+
+    <div>
+      <p>
+        Welcome to my portfolio.
+      </p>
+    </div>
+
+    <div>
+      <div>
+        <div>
+          <img src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
+        </div>
+
+        <div>
+          <h2>
+            Github
+          </h2>
+        </div>
+      </div>
+
+      <div>
+        <div>
+          <img src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
+        </div>
+
+        <div>
+          <h2>
+            Gmail
+          </h2>
+        </div>
+      </div>
     </div>
   </div>
 </body>
