--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div class="h-100vh">
-    <div>
-      <h1>
+    <div class="w-100vw h-20vh text-7xl flex justify-center items-center text-center">
+      <h1 class="inter-bold tracking-tighter">
         Front End Dev.
       </h1>
     </div>
