--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
-<body>
+<body class="overflow-x-hidden">
   <div class="h-100vh">
     <div class="w-100vw h-20vh text-7xl flex justify-center items-center text-center">
       <h1 class="inter-bold tracking-tighter">
@@ -17,8 +17,8 @@
       </h1>
     </div>
 
-    <div>
-      <img src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
+    <div class="w-100vw h-70vh flex justify-center items-center text-center">
+      <img class="rounded-4xl w-60vw" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
     </div>
 
     <div>
