--- a/index.html
+++ b/index.html
@@ -17,36 +17,38 @@
       </h1>
     </div>
 
-    <div class="w-100vw h-70vh flex justify-center items-center text-center">
-      <img class="rounded-4xl w-60vw" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
+    <div class="w-100vw h-60vh flex justify-center items-center text-center">
+      <img class="rounded-4xl w-50vw" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
     </div>
 
-    <div>
-      <p>
+    <div class="flex justify-center items-center text-center pt-5">
+      <p class="text-2xl inter-medium text-par tracking-tight">
         Welcome to my portfolio.
       </p>
     </div>
 
-    <div>
-      <div>
+    <div class="flex justify-between items-center text-center w-20vw mx-auto my-auto h-20vh">
+      <a href="https://github.com/yetnx" target="_blank">
+        <div class="flex justify-between items-center text-center w-40">
+          <div>
+            <img class="h-11 w-11" src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
+          </div>
+  
+          <div>
+            <h2 class="inter-bold tracking-tighter text-par text-4xl">
+              Github
+            </h2>
+          </div>
+        </div>
+      </a>
+
+      <div class="flex justify-between items-center text-center w-36"> 
         <div>
-          <img src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
+          <img class="w-11 h-8" src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
         </div>
 
         <div>
-          <h2>
-            Github
-          </h2>
-        </div>
-      </div>
-
-      <div>
-        <div>
-          <img src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
-        </div>
-
-        <div>
-          <h2>
+          <h2 class="inter-bold tracking-tighter text-par text-4xl">
             Gmail
           </h2>
         </div>
