--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
       </div>
     </div>
   </div>
+
+  <div class="h-100vh">
+    <div>
+
+    </div>
+  </div>
 </body>
 <script src="script.js"></script>
 </html>
