Reset + New section

--- a/index.html
+++ b/index.html
@@ -56,9 +56,27 @@
     </div>
   </div>
 
-  <div class="h-100vh">
-    <div>
+  <div class="h-100vh bg-back">
+    <div class="flex flex-col justify-center items-center text-center">
+      <div class="w-100vw h-50vh flex justify-center items-center text-center">
+        <h1 class="inter-bold tracking-tighter text-par text-4xl">
+          Netflix
+        </h1>
 
+        <p class="inter-bold tracking-tighter text-par text-4xl">
+          This was one of the clones i did of famous websites.
+        </p>
+      </div>
+
+      <div class="w-100vw h-50vh flex justify-center items-center text-center">
+        <h1 class="inter-bold tracking-tighter text-par text-4xl">
+          Pinterest
+        </h1>
+
+        <p class="inter-bold tracking-tighter text-par text-4xl">
+          Another one
+        </p>
+      </div>
     </div>
   </div>
 </body>
