--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
           I know...
         </h1>
 
-        <div class="h-80 w-80 bg-slot rounded-3xl">
-          <div class="h-24">
-            <img class="h-24" src="https://imgs.search.brave.com/jQSwAmrI5GnCmB3Cb9c_HTN8RBq6AO5s43ZCf4emxqo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4t/aWNvbnMtcG5nLmZy/ZWVwaWsuY29tLzI1/Ni8xMDUxLzEwNTEy/NzcucG5nP3NlbXQ9/YWlzX2h5YnJpZA" alt="">
+        <div class="h-80 w-80 bg-slot rounded-3xl flex flex-col justify-between items-center text-center p-6">
+          <div class="h-24 mr-auto pl-8">
+            <img class="h-20" src="https://imgs.search.brave.com/jQSwAmrI5GnCmB3Cb9c_HTN8RBq6AO5s43ZCf4emxqo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4t/aWNvbnMtcG5nLmZy/ZWVwaWsuY29tLzI1/Ni8xMDUxLzEwNTEy/NzcucG5nP3NlbXQ9/YWlzX2h5YnJpZA" alt="">
           </div>
 
-          <div class="h-24">
-            <img class="h-24" src="https://imgs.search.brave.com/FiIS_nKlldX0uoNz31Z1EVjzQR9DzLzLvNqrGYb4bs4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC90YWlsd2lu/ZC1jc3MtaWNvbi0x/MDI0eDYxNS1mZGVp/czVyMS5wbmc" alt="">
+          <div class="h-24 ml-auto pr-6">
+            <img class="h-16" src="https://imgs.search.brave.com/FiIS_nKlldX0uoNz31Z1EVjzQR9DzLzLvNqrGYb4bs4/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC90YWlsd2lu/ZC1jc3MtaWNvbi0x/MDI0eDYxNS1mZGVp/czVyMS5wbmc" alt="">
           </div>
 
-          <div class="h-24">
-            <img class="h-24" src="https://imgs.search.brave.com/gNwShVHwW-NISMTyiJRTVYuQgBb5IEBXQSQ4nqHcsVk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC9maWdtYS1p/Y29uLTY4NHgxMDI0/LWJmbzdkb2ZtLnBu/Zw" alt="">
+          <div class="h-24 mr-auto pl-8">
+            <img class="h-20" src="https://imgs.search.brave.com/gNwShVHwW-NISMTyiJRTVYuQgBb5IEBXQSQ4nqHcsVk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC9maWdtYS1p/Y29uLTY4NHgxMDI0/LWJmbzdkb2ZtLnBu/Zw" alt="">
           </div>
         </div>
       </div>
@@ -83,20 +83,28 @@
           Im learning...
         </h1>
 
-        <div class="h-80 w-80 bg-slot rounded-3xl">
-          <div class="h-24">
-            <img class="h-24" src="https://imgs.search.brave.com/XpPXrPPJT3LlJSbqj1PtnJ89ERtjgkdr8nbTuLCcqZQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC9qYXZhc2Ny/aXB0LWpzLWljb24t/MjA0OHgyMDQ4LW55/eHZ0dmswLnBuZw" alt="">
+        <div class="h-80 w-80 bg-slot rounded-3xl flex flex-col justify-between items-center text-center p-6">
+          <div class="h-24 ml-auto pr-8">
+            <img class="h-20" src="https://imgs.search.brave.com/XpPXrPPJT3LlJSbqj1PtnJ89ERtjgkdr8nbTuLCcqZQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC9qYXZhc2Ny/aXB0LWpzLWljb24t/MjA0OHgyMDQ4LW55/eHZ0dmswLnBuZw" alt="">
           </div>
 
-          <div class="h-24">
-            <img class="h-24" src="https://imgs.search.brave.com/FihthY8hMrxn60mcDaOWs6cpLeU5olROkI4hra30AuQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy9h/L2E3L1JlYWN0LWlj/b24uc3Zn" alt="">
+          <div class="h-24 mr-auto pl-6">
+            <img class="h-20" src="https://imgs.search.brave.com/FihthY8hMrxn60mcDaOWs6cpLeU5olROkI4hra30AuQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly91cGxv/YWQud2lraW1lZGlh/Lm9yZy93aWtpcGVk/aWEvY29tbW9ucy9h/L2E3L1JlYWN0LWlj/b24uc3Zn" alt="">
           </div>
 
-          <div class="h-24">
-            <img class="h-24" src="https://static-00.iconduck.com/assets.00/next-js-icon-512x512-zuauazrk.png" alt="">
+          <div class="h-24 ml-auto pr-8">
+            <img class="h-20" src="https://static-00.iconduck.com/assets.00/next-js-icon-512x512-zuauazrk.png" alt="">
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <div class="h-20vh bg-back">
+    <div class="flex justify-center items-center text-center h-20vh">
+      <h1 class="inter-bold tracking-tighter text-black text-6xl">
+        Projects
+      </h1>
     </div>
   </div>
 
