--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <div class="h-100vh bg-back">
     <div class="flex flex-col justify-center items-center text-center">
-      <div class="w-100vw h-50vh flex justify-center items-center text-center">
+      <div class="w-100vw h-50vh flex flex-col justify-center items-center text-center">
         <h1 class="inter-bold tracking-tighter text-par text-4xl">
           Netflix
         </h1>
@@ -120,7 +120,7 @@
         </p>
       </div>
 
-      <div class="w-100vw h-50vh flex justify-center items-center text-center">
+      <div class="w-100vw h-50vh flex flex-col justify-center items-center text-center">
         <h1 class="inter-bold tracking-tighter text-par text-4xl">
           Pinterest
         </h1>
@@ -129,6 +129,13 @@
           Another one
         </p>
       </div>
+    </div>
+  </div>
+  <div class="h-10vh w-100vw bg-foot flex justify-center items-center text-center">
+    <div class="h-10vh w-100vw bg-foot flex justify-center items-center text-center">
+      <h3 class="text-white inter-medium">
+        @yetnx
+      </h3>
     </div>
   </div>
 </body>
