--- a/index.html
+++ b/index.html
@@ -10,45 +10,45 @@
   <title>Document</title>
 </head>
 <body class="overflow-x-hidden">
-  <div class="h-100vh flex flex-col ">
-    <div class="w-100vw h-20vh text-7xl flex justify-center items-center text-center">
+  <div class="min-h-screen flex flex-col">
+    <div class="w-full h-20vh text-4xl sm:text-7xl flex justify-center items-center text-center">
       <h1 class="inter-bold tracking-tighter">
         Front End Dev.
       </h1>
     </div>
 
-    <div class="w-100vw h-60vh flex justify-center items-center text-center">
-      <img class="rounded-4xl w-50vw" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
+    <div class="w-full h-60vh flex justify-center items-center text-center">
+      <img class="rounded-4xl w-11/12 sm:w-2/3 lg:w-1/2" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
     </div>
 
     <div class="flex justify-center items-center text-center my-auto">
-      <p class="text-2xl inter-medium text-par tracking-tight">
+      <p class="text-lg sm:text-2xl inter-medium text-par tracking-tight">
         Welcome to my portfolio.
       </p>
     </div>
 
-    <div class="flex justify-between items-center text-center w-20vw mx-auto mt-auto h-10vh">
+    <div class="flex justify-between items-center text-center w-full sm:w-3/4 lg:w-1/3 mx-auto mt-auto h-10vh">
       <a href="https://github.com/yetnx" target="_blank">
-        <div class="flex justify-between items-center text-center w-40">
+        <div class="flex justify-between items-center text-center w-24 sm:w-40">
           <div>
-            <img class="h-11 w-11" src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
+            <img class="h-8 w-8 sm:h-11 sm:w-11" src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
           </div>
   
           <div>
-            <h2 class="inter-bold tracking-tighter text-par text-4xl">
+            <h2 class="inter-bold tracking-tighter text-par text-xl sm:text-4xl">
               Github
             </h2>
           </div>
         </div>
       </a>
 
-      <div class="flex justify-between items-center text-center w-36"> 
+      <div class="flex justify-between items-center text-center w-24 sm:w-36"> 
         <div>
-          <img class="w-11 h-8" src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
+          <img class="w-8 h-6 sm:w-11 sm:h-8" src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
         </div>
 
         <div>
-          <h2 class="inter-bold tracking-tighter text-par text-4xl">
+          <h2 class="inter-bold tracking-tighter text-par text-xl sm:text-4xl">
             Gmail
           </h2>
         </div>
@@ -56,14 +56,14 @@
     </div>
   </div>
 
-  <div class="h-50vh bg-back">
-    <div class="flex justify-between items-center text-center h-50vh w-50vw mx-auto">
-      <div class="flex flex-col">
-        <h1 class="inter-bold tracking-tighter text-par text-4xl pb-3">
+  <div class="h-50vh bg-back sm:h-70vh">
+    <div class="flex flex-col md:flex-row justify-between items-center text-center h-full w-11/12 md:w-3/4 lg:w-1/2 mx-auto p-8">
+      <div class="flex flex-col mb-6 md:mb-0">
+        <h1 class="inter-bold tracking-tighter text-par text-2xl sm:text-4xl pb-3">
           I know...
         </h1>
 
-        <div class="h-80 w-80 bg-slot rounded-3xl flex flex-col justify-between items-center text-center p-6">
+        <div class="h-64 w-full sm:h-80 sm:w-80 bg-slot rounded-3xl flex flex-col justify-between items-center text-center p-6">
           <div class="h-24 mr-auto pl-8">
             <img class="h-20" src="https://imgs.search.brave.com/jQSwAmrI5GnCmB3Cb9c_HTN8RBq6AO5s43ZCf4emxqo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4t/aWNvbnMtcG5nLmZy/ZWVwaWsuY29tLzI1/Ni8xMDUxLzEwNTEy/NzcucG5nP3NlbXQ9/YWlzX2h5YnJpZA" alt="">
           </div>
@@ -78,12 +78,12 @@
         </div>
       </div>
 
-      <div>
-        <h1 class="inter-bold tracking-tighter text-par text-4xl pb-3">
-          Im learning...
+      <div class="flex flex-col">
+        <h1 class="inter-bold tracking-tighter text-par text-2xl sm:text-4xl pb-3">
+          I'm learning...
         </h1>
 
-        <div class="h-80 w-80 bg-slot rounded-3xl flex flex-col justify-between items-center text-center p-6">
+        <div class="h-64 w-full sm:h-80 sm:w-80 bg-slot rounded-3xl flex flex-col justify-between items-center text-center p-6">
           <div class="h-24 ml-auto pr-8">
             <img class="h-20" src="https://imgs.search.brave.com/XpPXrPPJT3LlJSbqj1PtnJ89ERtjgkdr8nbTuLCcqZQ/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMtMDAuaWNvbmR1/Y2suY29tL2Fzc2V0/cy4wMC9qYXZhc2Ny/aXB0LWpzLWljb24t/MjA0OHgyMDQ4LW55/eHZ0dmswLnBuZw" alt="">
           </div>
@@ -101,8 +101,8 @@
   </div>
 
   <div class="h-20vh bg-back">
-    <div class="flex justify-center items-center text-center h-20vh">
-      <h1 class="inter-bold tracking-tighter text-black text-6xl">
+    <div class="flex justify-center items-center text-center h-full">
+      <h1 class="inter-bold tracking-tighter text-black text-4xl sm:text-6xl">
         Projects
       </h1>
     </div>
@@ -110,29 +110,30 @@
 
   <div class="h-100vh bg-back">
     <div class="flex flex-col justify-center items-center text-center">
-      <div class="w-100vw h-50vh flex flex-col justify-center items-center text-center">
-        <h1 class="inter-bold tracking-tighter text-par text-4xl">
+      <div class="w-full h-50vh md:h-1/2 flex flex-col justify-center items-center text-center">
+        <h1 class="inter-bold tracking-tighter text-par text-2xl sm:text-4xl">
           Netflix
         </h1>
 
-        <p class="inter-bold tracking-tighter text-par text-4xl">
-          This was one of the clones i did of famous websites.
+        <p class="inter-bold tracking-tighter text-par text-xl sm:text-4xl">
+          This was one of the clones I did of famous websites.
         </p>
       </div>
 
-      <div class="w-100vw h-50vh flex flex-col justify-center items-center text-center">
-        <h1 class="inter-bold tracking-tighter text-par text-4xl">
+      <div class="w-full h-50vh md:h-1/2 flex flex-col justify-center items-center text-center">
+        <h1 class="inter-bold tracking-tighter text-par text-2xl sm:text-4xl">
           Pinterest
         </h1>
 
-        <p class="inter-bold tracking-tighter text-par text-4xl">
+        <p class="inter-bold tracking-tighter text-par text-xl sm:text-4xl">
           Another one
         </p>
       </div>
     </div>
   </div>
-  <div class="h-10vh w-100vw bg-foot flex justify-center items-center text-center">
-    <div class="h-10vh w-100vw bg-foot flex justify-center items-center text-center">
+
+  <div class="h-10vh w-full bg-foot flex justify-center items-center text-center">
+    <div class="h-full w-full flex justify-center items-center text-center">
       <h3 class="text-white inter-medium">
         @yetnx
       </h3>
