--- a/index.html
+++ b/index.html
@@ -10,49 +10,47 @@
   <title>Document</title>
 </head>
 <body class="overflow-x-hidden">
-  <div class="h-full flex flex-col">
-    <div class="w-full h-20vh text-7xl flex justify-center items-center text-center">
+  <div class="h-100vh flex flex-col ">
+    <div class="w-100vw h-20vh text-7xl flex justify-center items-center text-center">
       <h1 class="inter-bold tracking-tighter">
         Front End Dev.
       </h1>
     </div>
 
-    <div class="w-100vw h-50vh flex justify-center items-center text-center">
-      <img class="rounded-4xl w-9/12" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
+    <div class="w-100vw h-60vh flex justify-center items-center text-center">
+      <img class="rounded-4xl w-50vw" src="https://framerusercontent.com/images/NHLsx4N6Yawu4kvEQuclZAD5cc.gif" alt="">
     </div>
 
-    <div class="flex flex-col justify-between items-center text-center w-20vw mx-auto mt-auto h-30vh">
-      <div class="flex justify-center items-center text-center w-50vw">
-        <p class="text-2xl inter-medium text-par tracking-tight">
-          Welcome to my portfolio.
-        </p>
-      </div>
+    <div class="flex justify-center items-center text-center my-auto">
+      <p class="text-2xl inter-medium text-par tracking-tight">
+        Welcome to my portfolio.
+      </p>
+    </div>
 
-      <div class="flex flex-row justify-between items-center mb-24 w-70vw">
-        <a href="https://github.com/yetnx" target="_blank">
-          <div class="flex justify-between items-center text-center w-40">
-            <div>
-              <img class="h-11 w-11" src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
-            </div>
-    
-            <div>
-              <h2 class="inter-bold tracking-tighter text-par text-4xl">
-                Github
-              </h2>
-            </div>
-          </div>
-        </a>
-  
-        <div class="flex justify-between items-center text-center w-36"> 
+    <div class="flex justify-between items-center text-center w-20vw mx-auto mt-auto h-10vh">
+      <a href="https://github.com/yetnx" target="_blank">
+        <div class="flex justify-between items-center text-center w-40">
           <div>
-            <img class="w-11 h-8" src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
+            <img class="h-11 w-11" src="https://framerusercontent.com/images/yDF9b0sgHwVdRnRZcVc8XTPo.webp?scale-down-to=512" alt="">
           </div>
   
           <div>
             <h2 class="inter-bold tracking-tighter text-par text-4xl">
-              Gmail
+              Github
             </h2>
           </div>
+        </div>
+      </a>
+
+      <div class="flex justify-between items-center text-center w-36"> 
+        <div>
+          <img class="w-11 h-8" src="https://framerusercontent.com/images/BltfX3aF2nHnm6zAzlaT5jPhRTM.webp?scale-down-to=512" alt="">
+        </div>
+
+        <div>
+          <h2 class="inter-bold tracking-tighter text-par text-4xl">
+            Gmail
+          </h2>
         </div>
       </div>
     </div>
