--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>My Portfolio</title>
 </head>
 <body class="overflow-x-hidden">
   <div class="h-100vh flex flex-col ">
@@ -118,6 +118,16 @@
         <p class="inter-bold tracking-tighter text-par text-4xl">
           This was one of the clones i did of famous websites.
         </p>
+
+        <div class="flex justify-center items-center text-center h-8 w-32 bg-black rounded-lg mt-3">
+          <a href="https://netflix-clone-three-wheat-36.vercel.app/" target="_blank">
+            <button>
+            <h1 class="inter-medium text-white">
+              Go to the site
+            </h1>
+            </button>
+          </a>
+        </div>
       </div>
 
       <div class="w-100vw h-50vh flex flex-col justify-center items-center text-center">
@@ -128,6 +138,16 @@
         <p class="inter-bold tracking-tighter text-par text-4xl">
           Another one
         </p>
+
+        <div class="flex justify-center items-center text-center h-8 w-32 bg-black rounded-lg mt-3">
+          <a href="https://pinterest-clone-sigma-ochre.vercel.app/" target="_blank">
+            <button>
+            <h1a class="inter-medium text-white">
+              Go to the site
+            </h1a>
+            </button>
+          </a>
+        </div>
       </div>
     </div>
   </div>
