--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 <body class="overflow-x-hidden">
   <div class="h-100vh flex flex-col ">
-    <div class="w-100vw h-20vh text-7xl flex justify-center items-center text-center">
+    <div class="flex items-center w-100vw h-10vh pl-7">
+      <div id="image-container" class="flex justify-center items-center h-11 w-11 bg-icon rounded-md hover:cursor-help transition-all">
+        <img id="image" class="h-9 w-9 rounded-md transition-all" src="https://i.pinimg.com/564x/cb/ef/98/cbef98583b5166ab0d9c0ba2902b77a3.jpg" alt="">
+      </div>
+    </div>
+
+    <div class="w-100vw h-15vh text-7xl flex justify-center items-center text-center">
       <h1 class="inter-bold tracking-tighter">
         Front End Dev.
       </h1>
