--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
   <div class="h-screen bg-back dark:bg-gray-800 transition-colors duration-300">
     <div class="flex flex-col justify-center items-center text-center">
-      <div class="w-full h-1/2 flex flex-col justify-center items-center text-center">
+      <div class="w-full h-50vh flex flex-col justify-center items-center text-center">
         <h1 class="inter-bold tracking-tighter text-current text-4xl">
           Netflix
         </h1>
@@ -143,7 +143,7 @@
         </div>
       </div>
 
-      <div class="w-full h-1/2 flex flex-col justify-center items-center text-center">
+      <div class="w-full h-50vh flex flex-col justify-center items-center text-center">
         <h1 class="inter-bold tracking-tighter text-current text-4xl">
           Pinterest
         </h1>
